--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
     <title>Valence Utilitarianism</title>
     <link rel="stylesheet" media="screen" href="/css/blog.css" />
     <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.timeago.js"></script>
     <script type="text/javascript" src="/js/blog.js"></script>
   </head>
   <body>
